# buildproj

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/: copilot-commit-message-instructions.md
buildproj/: __init__.py  __main__.py  build_tools.cp313-win_amd64.pyd  build_tools.cpp  build_tools.pyd  build_tools.pyi
