[project]
name = "buildproj"
version = "0.1.1.a"
description = "Build Tool for C/C++ Pybind11 Projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["tqdm>=4.67.1"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-project = "buildproj.__main__:_main_entry"
